feature: completed task
Signed-off-by: Kostya Nedikov <kostya55516@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -11,4 +11,9 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    // https://mvnrepository.com/artifact/org.jetbrains/annotations
+    compile group: 'org.jetbrains', name: 'annotations', version: '13.0'
+    // https://mvnrepository.com/artifact/com.beust/jcommander
+    compile group: 'com.beust', name: 'jcommander', version: '1.7'
+
 }
