fix: gitignore update with .jar
Signed-off-by: Kostya Nedikov <kostya55516@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -10,12 +10,14 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
-# Package Files #
+# Package Files
+*.jar
 *.war
 *.ear
 *.zip
 *.tar.gz
 *.rar
+!gradle-wrapper.jar
 
 # Files
 *.xml
